# dlpforRK

./: CMakeLists.txt  CMakePresets.json  Lcr2.qrc  README.md  vcpkg.json  x64-arm64-toolchain.cmake
inc/: mainwindow.h
src/: dlpc350_usb.cpp  mainwindow.cpp
ui/: mainwindow.ui
